add multiple-column display to main menu - RMNRW-315

--- a/source/sass/elements/_navs.scss
+++ b/source/sass/elements/_navs.scss
@@ -352,8 +352,18 @@
       width: 75%;
       padding: $padding-base-horizontal $padding-base-horizontal*3.6;
       margin-bottom: $padding-base-horizontal*5;
+      @include larger-than($screen-md-min) {
+        column-count: 2;
+        column-gap: $grid-gutter-width;
+      }
+      @include larger-than($screen-lg-min) {
+        column-count: 3;
+      }
       .submenu {
         padding: $padding-base-vertical 0;
+        page-break-inside: avoid;
+        break-inside: avoid;
+        display: table;
       }
       ul{
         list-style: none;
