--- a/source/sass/elements/_paragraphs.scss
+++ b/source/sass/elements/_paragraphs.scss
@@ -2,7 +2,7 @@
 .paragraph{
 	a{
 		font-weight: bold;
-		color: $brand-primary;
+		color: $brand-secondary;
 	}
 }
 
@@ -13,7 +13,7 @@ div[class*="__header-paragraphs"] .paragraph a {
 
 .paragraph__header{
 	font-size: $font-size-h3;
-  color: $brand-primary;
+    color: $brand-secondary;
 	display: flex;
 	margin: 0 -20px;
 	padding: 20px;
@@ -36,7 +36,7 @@ div[class*="__header-paragraphs"] .paragraph a {
 	}
 	i{
 		color: $color-white;
-		background-color: $brand-primary;
+		background-color: $brand-secondary;
 		min-width: 45px; // To always keep width - responsive
 		width: 45px;
 		height: 45px;
