--- a/source/sass/modules/media_gallery/_media-gallery.scss
+++ b/source/sass/modules/media_gallery/_media-gallery.scss
@@ -48,7 +48,7 @@
 // For view mode preview
 .media--preview {
   .gallery__title {
-    color: $brand-primary;
+    color: $brand-secondary;
     padding: 0 $padding-xs-horizontal;
   }
 }
