--- a/source/sass/components/_content.scss
+++ b/source/sass/components/_content.scss
@@ -25,7 +25,7 @@ h1, h2, h3, h4, h5, h6{
 
 }
 a{
-  color: $brand-primary;
+  color: $brand-secondary;
 }
 blockquote{
   border-color: $brand-primary;
