--- a/source/sass/components/_footer.scss
+++ b/source/sass/components/_footer.scss
@@ -79,7 +79,7 @@
     }
   }
   &__menu{
-    background: $nrw-secondary;
+    background: $brand-secondary;
     padding: $padding-base-vertical*4 $padding-base-horizontal $padding-base-vertical*3;
     
     .nrw-menu-footer{
