--- a/source/sass/modules/node_event/_node_event.scss
+++ b/source/sass/modules/node_event/_node_event.scss
@@ -1,38 +1,47 @@
-  .event__latest, .event__teaser{
-    &-date-left{
-      text-align: center;
-      font-size: 54px;
-      line-height: 54px;
-      color: $brand-primary;
-    }
-    &__day-of-week{
-      font-weight: bold;
-      color: $brand-primary;
-      font-size: $font-size-base;
-    }
-    &__month{
-      font-weight: bold;
-      color: $brand-primary;
-      margin-top: $grid-gutter-width/4;
-      font-size: $font-size-base - 2;
-      line-height: $font-size-base;
-    }
-    h3{
-      font-weight: bold;
-      line-height: $font-size-h3;
-    }
-  }
-  .field--name-field-tags .field--item {
+.event {
+  &__address{
+    margin: 0 $grid-gutter-width/-2;
+    padding: $grid-gutter-width/2;
+    padding-top: 0;
     background: $brand-primary;
-    display: inline-block;
     color: $color-white;
-    margin-right: $grid-gutter-width/4;
-    font-size: $font-size-small;
-    padding: $grid-gutter-width/10 $grid-gutter-width/4;
-    a{
-      color: $color-white;
-    }
   }
+}
+.event__latest, .event__teaser{
+  &-date-left{
+    text-align: center;
+    font-size: 54px;
+    line-height: 54px;
+    color: $brand-primary;
+  }
+  &__day-of-week{
+    font-weight: bold;
+    color: $brand-primary;
+    font-size: $font-size-base;
+  }
+  &__month{
+    font-weight: bold;
+    color: $brand-primary;
+    margin-top: $grid-gutter-width/4;
+    font-size: $font-size-base - 2;
+    line-height: $font-size-base;
+  }
+  h3{
+    font-weight: bold;
+    line-height: $font-size-h3;
+  }
+}
+.field--name-field-tags .field--item {
+  background: $brand-primary;
+  display: inline-block;
+  color: $color-white;
+  margin-right: $grid-gutter-width/4;
+  font-size: $font-size-small;
+  padding: $grid-gutter-width/10 $grid-gutter-width/4;
+  a{
+    color: $color-white;
+  }
+}
 
 /* Teaser & Latest mode */
 .teaser-latest-mode {
