--- a/source/sass/elements/_paragraphs.scss
+++ b/source/sass/elements/_paragraphs.scss
@@ -49,6 +49,8 @@ div[class*="__header-paragraphs"] .paragraph a {
 	h2{
 		margin: 0;
 		line-height: 1;
+		font-size: inherit;
+		line-height: 1.15;
 	}
 	.sub-title{
 		font-weight: bold;
