--- a/source/sass/modules/media_citation/_media-citation.scss
+++ b/source/sass/modules/media_citation/_media-citation.scss
@@ -30,6 +30,7 @@
     font-size: $font-size-h3;
     font-family: $font-family-serif;
     font-style: italic;
+    line-height: 1.5;
     padding-bottom: $padding-base-vertical;
     @include smaller-than($screen-xs-max) {
       font-size: $font-size-h4;
