--- a/source/sass/modules/paragraph_view_reference/_paragraph-view-reference.scss
+++ b/source/sass/modules/paragraph_view_reference/_paragraph-view-reference.scss
@@ -21,6 +21,14 @@
       }
     }
   }
+  .media,
+  .event {
+    time {
+      font-size: $font-size-small;
+      line-height: 1.5;
+      font-weight: bold;
+    }
+  }
 }
 
 .region-content .view-reference {
