--- a/templates/system/footer--en.html.twig
+++ b/templates/system/footer--en.html.twig
@@ -4,6 +4,9 @@
             <h3>OVERVIEW
                 <span>CONTENT</span>
             </h3>
+            <div class="printer">
+                <a href="{{ url('<current>') }}/?print=1"><span>PRINT</span><i class="fa fa-print" aria-hidden="true"></i></a>
+            </div>
         </div>
         <div class="footer__menu">
         {# demo menu #}
