--- a/templates/system/footer.html.twig
+++ b/templates/system/footer.html.twig
@@ -4,6 +4,9 @@
             <h3>IM ÜBERBLICK
                 <span>INHALT</span>
             </h3>
+            <div class="printer">
+                <a href="{{ url('<current>') }}/?print=1"><span>DRUCKEN</span><i class="fa fa-print" aria-hidden="true"></i></a>
+            </div>
         </div>
         <div class="footer__menu">
         {# demo menu #}
