--- a/source/sass/modules/media_person/_media-person.scss
+++ b/source/sass/modules/media_person/_media-person.scss
@@ -1,7 +1,7 @@
 .media-person {
   padding: $grid-gutter-width/2;
   color: $color-white;
-  background: $brand-primary;
+  background: $brand-secondary;
   margin-left: $grid-gutter-width/-2;
   margin-right: $grid-gutter-width/-2;
   border: 1px solid $nrw-light;
