--- a/source/sass/modules/media_video/_media-video.scss
+++ b/source/sass/modules/media_video/_media-video.scss
@@ -10,7 +10,7 @@
     font-size: $font-size-small;
     line-height: $font-size-small;
     font-weight: bold;
-    background: $brand-primary;
+    background: $brand-secondary;
     padding: $padding-xs-vertical*3 $padding-small-horizontal;
   }
   &__info {
