--- a/source/sass/modules/paragraph_download/_paragraph-download.scss
+++ b/source/sass/modules/paragraph_download/_paragraph-download.scss
@@ -2,11 +2,11 @@
     &.downloads{
         position: relative;
         article{
-            @include icon-before($fa-var-arrow-circle-o-down); 
+            @include icon-before($fa-var-arrow-circle-o-down);
             &:after{
                 position: absolute;
-            }   
-            width: 100%; 
+            }
+            width: 100%;
             .document__title{
                 padding-left: $grid-gutter-width/1.3;
             }
@@ -15,7 +15,7 @@
                 font-size: $font-size-h6;
                 span{
                     font-size: $font-size-h4;
-                    color: $brand-primary;
+                    color: $brand-secondary;
                 }
                 .mime-application-pdf{
                     @include icon-before($fa-var-file-pdf-o);
@@ -36,7 +36,7 @@
 
 .paragraph.nav-list{
     article{
-        float: left; 
+        float: left;
         margin-top: $padding-large-vertical + 5;
         -webkit-font-smoothing: antialiased;
         &:before{
@@ -44,8 +44,9 @@
             min-height: 32px;
             position: relative;
             top: 4px;
+            left: 1px;
             font-size: $font-size-h3;
-            color: $brand-primary;
+            color: $brand-secondary;
             margin-right: $padding-base-horizontal;
         }
     }
