--- a/source/sass/modules/paragraph_faq/_paragraphs-faq.scss
+++ b/source/sass/modules/paragraph_faq/_paragraphs-faq.scss
@@ -28,7 +28,7 @@
 		&:after{
 			content: " ";
 			display: inline-block;
-			 width: 100%; 
+			 width: 100%;
 			height: 3px;
 			border: 1px solid $nrw-gray;
 			position: relative;
@@ -65,10 +65,10 @@
 	position: relative;
 	padding:  $padding-small-vertical*2 0;
 	margin-top: $padding-base-vertical/3;
-	&_question{	 
+	&_question{
 		cursor: pointer;
 		font-size: $font-size-h3;
-		color: $brand-primary;
+		color: $brand-secondary;
 			@include icon-before($fa-var-angle-down);
 			&:before{
 				margin-right: $padding-base-horizontal*0.833;
