--- a/source/sass/modules/paragraph_slideshow/_paragraphs-slideshow.scss
+++ b/source/sass/modules/paragraph_slideshow/_paragraphs-slideshow.scss
@@ -10,6 +10,8 @@
   }
   .slick-track {
     .slick-slide {
+      margin: 0;
+      max-width: 1280px;
       .slide__link {
         max-height: 540px;
         &:hover,
@@ -53,7 +55,7 @@
           width: 100%;
           margin-bottom: 0;
         }
-        h2 {
+        h2{
           margin: 0 0 12px;
           line-height: normal;
           font-family: $font-family-sans-serif;
@@ -62,6 +64,9 @@
         p {
           font-size: $font-size-h6;
           font-weight: normal;
+          &:first-child{
+            margin: 0;
+          }
         }
         .slide__text__sub {
           padding-right: $padding-small-horizontal*2;
@@ -95,6 +100,33 @@
         display: inline-block;
         width: 100%;
         vertical-align: top;
+      }
+    }
+  }
+}
+
+
+.slideshow{
+  padding: 0;
+  .normal-page, .event,.press, .blog{ 
+    &__slideshow-image{
+      padding: 0;
+    } 
+    &__slideshow-content{
+      padding: $grid-gutter-width/2;
+       a{
+        margin: 0 0 12px;
+        line-height: normal;
+        font-family: $font-family-sans-serif;
+        color: $brand-primary;
+        h3{
+          font-weight: bold;
+          color: $brand-primary;
+        }
+      }
+      p{
+        font-size: 14px;
+        font-weight: normal;
       }
     }
   }
