--- a/source/sass/modules/simplenews/_simplenews.scss
+++ b/source/sass/modules/simplenews/_simplenews.scss
@@ -1,3 +1,8 @@
+.simplenews-issue.full {
+  padding-top: $grid-gutter-width/2;
+  padding-bottom: $grid-gutter-width/2;
+}
+
 .block-simplenews {
   .form-item-message {
     margin-bottom: $padding-large-vertical;
