some styling adjustments for latest media previews

--- a/source/sass/modules/paragraph_view_reference/_paragraph-view-reference.scss
+++ b/source/sass/modules/paragraph_view_reference/_paragraph-view-reference.scss
@@ -35,6 +35,9 @@
       font-weight: bold;
     }
   }
+  .view-latest-media .media--preview__description {
+    color: $color-white;
+  }
 }
 
 .region-content .view-reference {
