--- a/source/sass/view-modes/_preview.scss
+++ b/source/sass/view-modes/_preview.scss
@@ -37,6 +37,7 @@
   padding: $padding-xs-horizontal $padding-xs-horizontal 0 $padding-xs-horizontal;
   text-align: left;
   font-size: $font-size-base;
+  font-weight: normal;
 }
 
 .media--preview__caption {
