--- a/source/sass/view-modes/_search.scss
+++ b/source/sass/view-modes/_search.scss
@@ -1,6 +1,7 @@
 .media--search {
   background-color: $nrw-light;
   margin: 0 0 $grid-gutter-width/2 0;
+  min-height: 200px;
 }
 
 .media--search__type-text {
