add padding in sidebar and change color to secondary

--- a/source/sass/components/_search.scss
+++ b/source/sass/components/_search.scss
@@ -163,8 +163,9 @@
 .path-mediathek,
 .path-medienverwaltung {
   aside{
-    background-color: $brand-primary;
+    background-color: $brand-secondary;
     color: $color-white;
+    padding-top: $grid-gutter-width/2;
     .block{
       margin-bottom: $grid-gutter-width/2;
       h2,.control-label{
