--- a/source/sass/views/_view-search-media.scss
+++ b/source/sass/views/_view-search-media.scss
@@ -7,6 +7,16 @@
   img {
     width: 100%;
   }
+
+  .view-content {
+    @media (min-width: $screen-md-min) {
+      display: flex;
+      flex-wrap: wrap;
+    }
+  }
+  .views-row {
+    padding-bottom: $grid-gutter-width*2;
+  }
 }
 
 .pager {
