Add press search calendar views templates

--- a/templates/system/page.html.twig
+++ b/templates/system/page.html.twig
@@ -129,7 +129,7 @@
           </a>
           <div class="col-xs-6 header__menu-icon">
               <i class="fa fa-bars" aria-hidden="true"></i>
-              <span>{% trans %}Menü{% endtrans %}
+              <span>{% trans %}Menü{% endtrans %}</span>
           </div>
           <div class="col-md-6 header__logo">
               <div class="image">
