--- a/templates/views-view--press_dates.html.twig
+++ b/templates/views-view--press_dates.html.twig
@@ -67,7 +67,7 @@
     <div class="view-calendar__header">
       <i class="fa fa-calendar" aria-hidden="true"></i>
       <h2>{% trans %}AKTUELLE{% endtrans %}
-          <span class="sub-title">{% trans %}VERANSTALTUNGEN{% endtrans %}</span>
+          <span class="sub-title">{% trans %}PRESSETERMINE{% endtrans %}</span>
       </h2>
     </div>
     {% if attachment_before %}
